# mnndemo

./: README.md
RecSDK/: CMakeLists.txt
RecSDK/data/model/: face_landmark_0707.mnn  face_quality_0707.mnn
RecSDK/include/: boeFaceFeature.hpp  boeFaceLandmark.hpp  boeFaceQuality.hpp  boeRec.hpp  boeRetinaFace.hpp  common_struct.hpp  face_library.h  utils.hpp
RecSDK/src/: boeFaceFeature.cpp  boeFaceLandmark.cpp  boeFaceQuality.cpp  boeRec.cpp  boeRetinaFace.cpp  common_alignment.cpp  face_library.cpp  main.cpp
